--- a/.gitignore
+++ b/.gitignore
@@ -141,4 +141,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+# migrations config
+config/
+
 # End of https://www.toptal.com/developers/gitignore/api/node
