--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.0"
+    "pg-hstore": "^2.3.4"
+  },
+  "devDependencies": {
+    "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
